# whatsapp-mcp

./: LICENSE  README.md
whatsapp-bridge/: main.go  migration_test.go  remove_participant_test.go  security_test.go  subscribe_chat_test.go
whatsapp-mcp-server/: main.py  pyproject.toml  test_config.py  test_list_chats_sort.py  test_remove_participant.py  test_subscribe_chat.py  whatsapp.py
